# janus-platform

./: .coverage  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  feedback_cli.py  janus_ingest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
core/document_brain/: extractor.py  models.py  pipeline.py  structurer.py
core/graph_brain/: graph_rag.py  neo4j_client.py  schema.py
core/ingestion_pipeline/: batch_ingester.py  chunker.py  extractors.py  tracker.py  watcher.py
core/learning_brain/: active_learner.py  feedback_model.py  prompt_optimizer.py  reward_model.py
core/llm/: client.py  json_utils.py
core/mcp_fabric/: claude_desktop_config.example.json  nl2cypher.py  server.py
demo/: e2e_check.py  graph_demo.py  learning_brain_check.py
docs/en/: architecture.md  document_brain.md  frontend.md  graph_brain.md  ingestion_pipeline.md  learning_brain.md  mcp_fabric.md  setup.md
docs/ru/: architecture.md  document_brain.md  frontend.md  graph_brain.md  ingestion_pipeline.md  learning_brain.md  mcp_fabric.md  setup.md
domains/finance/: tax_calculator.py
fixtures/: sample_contract.json
fixtures/ingestion/: sample.docx  sample.md  sample.rtf  sample.txt  sample2.txt  sample3.md
frontend/: app.py  async_runner.py  export_utils.py  graph_layout.py  main_window.py  mcp_client.py  style.qss
frontend/pages/: chat_tab.py  documents_tab.py  entities_tab.py  finance_tab.py  (+3 more)
tests/: conftest.py  test_active_learner.py  test_e2e_ingestion.py  test_export_utils.py  test_extractor.py  test_feedback_model.py  test_finance_tab.py  test_frontend_mcp_client.py  test_graph_brain.py  test_graph_layout.py  test_ingestion_batch.py  test_ingestion_chunker.py  test_ingestion_extractors.py  test_ingestion_tracker.py  test_learning_brain.py  test_legal_tools.py  test_llm_client.py  test_mcp_fabric.py  test_mcp_server_tools.py  test_neo4j_client.py  test_tax_calculator.py  test_watcher.py
